--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -20,17 +20,16 @@
             
             <div class="col-xl-4">
                 <label for=""class="quote-label">Intermediary<span class="required"></span></label>
-                <select class="form-select form-control-sm mb-1" id="quote-input" (ngModelChange)="agentShortDesc($event)" formControlName="agentCode" placement="right" >
+                <p-dropdown formControlName="agentCode" [options]="agents" optionLabel="name" placeholder=" " (onChange)="agentShortDesc(   )" [filter]="true" ></p-dropdown>
+                <!-- <select class="form-select form-control-sm mb-1" id="quote-input" (ngModelChange)="agentShortDesc($event)" formControlName="agentCode" placement="right" >
                     <option selected="true" disabled="disabled"></option> 
                     <option *ngFor="let data of agents"  [value]="data.id" >{{data.name}}</option>
-                </select> 
+                </select>  -->
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Branch<span class="required" ></span></label>
-                <select class="form-select form-control-sm mb-1" id="quote-input" formControlName="branchCode" placement="right" >
-                    <option selected="true" disabled="disabled"></option> 
-                    <option *ngFor="let data of branch"  [value]="data.id">{{data.name}}</option>
-                </select>  
+                <p-dropdown formControlName="branchCode" [options]="branch" optionLabel="name" placeholder=" " [filter]="true" ></p-dropdown>
+               
             </div>
            
           </div>
@@ -125,14 +124,16 @@
     <div class="card mb-4">
         <div class="card-body">
           <h6>Product Details </h6>
+          <div class="spinner" style="position: relative">
+            <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="true" color="#00529B" size="large" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+          </div>
           <form [formGroup]="quotationForm">
           <div class="row mt-3 mb-3">
             <div class="col-xl-4">
+               
                 <label for=""class="quote-label">Product</label>
-                <select class="form-select form-control-sm mb-1" id="quote-input" formControlName="productCode" (change)="getProductClause($event)" placement="right" >
-                    <option selected="true" disabled="disabled"></option> 
-                    <option *ngFor="let data of products" (click)="getProductClause(data.code)" [value]="data.code">{{data.description}}</option>
-                </select> 
+                <p-dropdown formControlName="productCode" [options]="products" optionLabel="description" (onChange)="getProductClause()" placeholder=" " [filter]="true" ></p-dropdown>
+               
             </div>
 
 
@@ -157,65 +158,79 @@
                 <p-table 
                 [value]="clauses"
                 dataKey="code" 
-              editMode="row" 
-              [tableStyle]="{'min-width': '50rem'}"
-              styleClass="p-datatable-sm"
-              responsiveLayout="scroll" 
-              class='ui-datatable'
-              [autoLayout]="true"
-              [paginator]="true"
-              [rows]="5"
-              [showCurrentPageReport]="true"
-              currentPageReportTemplate="{first} to {last} of {totalRecords}"
-              >
-                    <ng-template pTemplate="header">
-                        <tr>
-                            <th>Select</th>
-                            <th>Heading</th>
-                            <th>Wording</th>
-                            <th>Editable</th>
-                        </tr>
-                    </ng-template>
-                    <ng-template pTemplate="body" let-data let-editing="editing" let-ri="rowIndex">
-                        <tr [pEditableRow]="data">
-                            <td>
-                                <p-tableCheckbox [value]="data"></p-tableCheckbox>
-                            </td>
-                        
-                            <td  style=" white-space: nowrap;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            overflow-y: auto;
-                            max-width: 250px;">
-                            {{data.heading}}
-                            </td>
-                            <td style=" white-space: nowrap;
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            max-width:300px;
-                            overflow-y: auto;">
-                                <p-cellEditor>
-                                    <ng-template pTemplate="input" *ngIf="data.is_editable  === 'Y'">
-                                        <textarea rows="5" cols="30" pInputTextarea   [(ngModel)]="data.wording" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}"></textarea>
-                                    </ng-template>
-                                    <ng-template pTemplate="output">
-                                        {{data.wording}}
-                                    </ng-template>
-                                </p-cellEditor>
-                            </td>
-                            
-                          
-                            <td *ngIf="data.is_editable  !== 'Y'" style="padding-left: 24px;" > -- </td>
-                            <td *ngIf="data.is_editable  === 'Y'">
-                                <div class="flex align-items-center justify-content-center gap-2">
-                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow  icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
-                                    <button *ngIf="editing" pButton pRipple (click)="editRow(data,data.code)" type="button" pSaveEditableRow icon="pi pi-check" class="p-button-rounded p-button-text p-button-success mr-2"></button>
-                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button>
-                                </div>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
+                editMode="row" 
+                [tableStyle]="{'min-width': '50rem'}"
+                styleClass="p-datatable-sm"
+                responsiveLayout="scroll" 
+                class='ui-datatable'
+                [autoLayout]="true"
+                [paginator]="true"
+             [rows]="5"
+             [showCurrentPageReport]="true"
+             currentPageReportTemplate="{first} to {last} of {totalRecords} entries">
+                <ng-template pTemplate="header">
+                  <tr>
+                            <th style="width: 5%;padding-right: 50px;">Select</th>
+                            <th style="width: 25%;padding-right: 50px;">Heading</th>
+                            <th style="width: 40%;">Wording</th>
+                            <th style="width: 5%;"></th>
+                            <th style="width: 5%;">Editable</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-selectedClauseList let-editing="editing" let-ri="rowIndex">
+                    <tr [pEditableRow]="selectedClauseList">
+                          <td>
+                              <p-tableCheckbox [value]="selectedClauseList"></p-tableCheckbox>
+                          </td>
+                      
+                          <td  
+                              style=" white-space: nowrap;
+                              overflow: hidden;
+                              text-overflow: ellipsis;
+                              overflow-y: auto;
+                              max-width: 250px;" pTooltip="{{selectedClauseList.heading }}" tooltipPosition="top">
+                              <p-cellEditor>
+                                  <ng-template pTemplate="input" *ngIf="selectedClauseList.is_editable  === 'Y'">
+                                      <input pInputText type="text" [(ngModel)]="selectedClauseList.heading" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                  </ng-template>
+                                  <ng-template pTemplate="output">
+                                      {{selectedClauseList.heading}}
+                                  </ng-template>
+                              </p-cellEditor>
+                          </td>
+                          <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:300px; overflow-y: auto;">
+                            <p-cellEditor>
+                                <ng-template pTemplate="input">
+                                    <input pInputText type="text" [(ngModel)]="selectedClauseList.wording" class="form-control form-control-sm" [ngModelOptions]="{standalone: true}">
+                                </ng-template>
+                                <ng-template pTemplate="output">
+                                    {{selectedClauseList.wording}}
+                                </ng-template>
+                                <!-- Helper icon added next to the wording column -->
+                            </p-cellEditor>
+                          </td>
+                          <td>
+                            <button pButton pRipple type="button" (click)="openHelperModal(selectedClauseList)" icon="pi pi-info-circle" class="p-button-rounded p-button-text"></button>
+                          </td>
+                          <td *ngIf="selectedClauseList.is_editable  !== 'Y'" style="padding-left: 24px;" > -- </td>
+                          <td *ngIf="selectedClauseList.is_editable  === 'Y'">
+                              <div class="flex align-items-center justify-content-center gap-2">
+                                  <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow  icon="pi pi-pencil" class="p-button-rounded p-button-text"></button>
+                                  <button *ngIf="editing" pButton pRipple  type="button" pSaveEditableRow icon="pi pi-check" class="p-button-rounded p-button-text p-button-success mr-2"></button>
+                                  <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button>
+                               </div>
+                          </td>
+                    </tr>
+                    <!-- Modal for each row -->
+                    <p-dialog [(visible)]="selectedClauseList.showHelperModal" [modal]="false" [style]="{ 'width': '700px'}">
+                      <ng-container *ngIf="selectedClauseList">
+                          <div pResizable [ngStyle]="{'min-width.px': 200, 'min-height.px': 150}" (onResize)="onResize($event)">
+                              <p>{{ selectedClauseList.wording }}</p>
+                          </div>
+                      </ng-container>
+                    </p-dialog>
+                  </ng-template>
+              </p-table>
               </div>
           </div>
     </div>
