--- a/src/app/features/lms/components/quotation-list/quotation-list.component.html
+++ b/src/app/features/lms/components/quotation-list/quotation-list.component.html
@@ -171,16 +171,27 @@
       </div>
 
       <div class="tab-pane fade show active" id="gis2" role="tabpanel" aria-labelledby="gis2-tab">
-        <div class="d-flex justify-content-between mt-3 action-buttons-container">
+
+        <div class="d-flex justify-content-end  action-buttons-container">
+          <button
+          routerLink="/home/gis/quotation/quick-quote"
+            type="button"
+            class="btn btn-primary btn-sm" style="padding: 0.6em;"
+          >
+          Quick Quote
+          </button>
+
           <button
           routerLink="/home/gis/quotation/quotations-client-details"
             type="button"
-            class="btn btn-primary btn-sm float-end" style="padding: 0.6em;"
+            class="btn btn-primary btn-sm" style="padding: 0.6em;"
           >
-          <i class="fa-solid fa-plus"></i> New Quotation
+          Normal Quotation
           </button>
 
         </div>
+
+      
         <!-- Content for GIS tab goes here -->
         <div class="card">
           <div class="card-body">
