--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -3,7 +3,7 @@
      <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
      <div  class="container mx-2 mt-n1">  
 
-        <div *ngFor="let quotationDetail of quotationDetails" class="card mb-3" style=" position: relative;">
+        <div *ngFor="let coverType of passedCovertypes"  class="card mb-3" style=" position: relative;">
             <ngx-spinner
         name="coverComparisonScreen"
           type="ball-clip-rotate-multiple"
@@ -16,7 +16,8 @@
                 <div class="card-body">
                   
                     <!-- <p class="title ms-4" >{{ coverTypeShortDescription }}</p> -->
-                    <p class="title ms-4">{{ quotationDetail.riskInformation[0].covertypeShortDescription }}</p>
+                    <p class="title ms-4">{{ coverType.description }}</p>
+                    
                     <div class="row ms-3">
                         <div class="col-lg-4 col-12">
                         <p class="title2">Basic Premium</p>
@@ -25,7 +26,7 @@
                             <p class="details-label">Value of vehicle</p>
                             </div>
                             <div class="col-6">
-                            <p class="details-label">{{ sumInsuredValue | number }}</p>
+                            <p class="details-label">{{  sumInsuredValue | number }}</p>
                             </div>
                         </div>
                         <div class="row">
@@ -33,13 +34,13 @@
                             <p class="details-label">Premium</p>
                             </div>
                             <div class="col-6">
-                            <p class="details-label">{{ quotationDetail.premium | number }}</p>
+                            <p class="details-label">{{premiumResponse.riskLevelPremiums[0]?.premium }}</p>
                             </div>
                         </div>
                         </div>
                         <div class="col-lg-4 col-12" >
                         <p class="title2">Levies and taxes</p>
-                        <div *ngFor="let tax of quotationDetail.taxInformation">
+                        <div *ngFor="let tax ">
                             <div class="row">
                             <div class="col-6">
                                 <p class="details-label">{{ tax.description }}</p>
@@ -52,20 +53,20 @@
                         </div>
                         <div class="col-lg-4 col-12">
                         <p class="title2">Total payable premium</p>
-                        <p class="payable-premium text-center">{{ calculateTotalPayablePremium(quotationDetail) | number }}</p>
+                        <p class="payable-premium ms-4">{{premiumResponse.riskLevelPremiums[0]?.premium}}</p>
 
                         </div>
                     </div>
                   
                     <div class="float-start mb-4 ms-4" *ngIf="!isCollapsibleOpen">
-                        <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addMoreBenefits" id="btnCoverTypes" (click)="passCovertypeDesc(quotationDetail.riskInformation[0].covertypeShortDescription);passedRiskcode(quotationDetail.riskInformation[0].code);passedClient(quotationDetail.clientCode);selectedQuotationCover(quotationDetail)">Add more benefits</button>
+                        <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addMoreBenefits" id="btnCoverTypes" (click)="passCovertypeDesc(coverType.description ,coverType.coverTypeCode);createQuotation();" >Add more benefits</button>
                         <a class="btn btn-link ms-2" (click)="toggleCollapsible()">
                             View cover details
                         </a>                
                     </div>
                     <div class="float-end mb-4 me-4 " *ngIf="!isCollapsibleOpen">
-                        <button type="button" class="btn btn-outline-primary me-3" data-bs-toggle="modal" data-bs-target="#shareQuote" id="btnCoverTypes" (click)="passedClient(quotationDetail.clientCode)">Share quote</button>
-                        <button class="btn btn-primary" type="submit" id="btnCoverTypes" (click)="selectedQuotationCover(quotationDetail);passSelectedCover()">Select cover</button>
+                        <button type="button" class="btn btn-outline-primary me-3" data-bs-toggle="modal" data-bs-target="#shareQuote" id="btnCoverTypes" >Share quote</button>
+                        <button class="btn btn-primary" type="submit" id="btnCoverTypes" (click)="selectedQuotation(); SelectCover();">Select cover</button>
                     </div>
 
                     <!-- Add More Benefits Modal -->
@@ -75,7 +76,7 @@
                               <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
                              
                     
-                              <p-table [value]="filteredSection" id="clientTable" dataKey="code" [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
+                              <p-table [value]="quickQuoteSectionList" id="clientTable" dataKey="code" [tableStyle]="{ 'max-width': '50rem', 'border-spacing': '10 10px' }"
                                 [(selection)]="selectedSections"   [resizableColumns]="true" styleClass="p-datatable-sm"
                                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true" [rows]="10"
                                 [scrollable]="true" scrollDirection="horizontal" [showCurrentPageReport]="true"
