--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -544,7 +544,7 @@
                       <i class="fa-solid fa-trash-can"></i>
                     </button>
                   </div>
-                  <div class="col-6 d-flex justify-content-center" >
+                  <div class="col-6 d-flex justify-content-end" >
                     <button type="button" class="btn btn-primary" id="importButton" data-bs-dismiss="modal">Import Files</button>
 
                   </div>
