--- a/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quick/quick.component.html
@@ -345,7 +345,7 @@
 
               <div class="d-flex justify-content-center align-content-center">
                 <span class="font-small__color_primary d-flex align-self-center"
-                  >$</span
+                  >NGN</span
                 >
                 <span
                   class="font-small__color_primary d-flex align-self-end"
@@ -358,7 +358,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <div class="font-grey__font-eight__700">or ${{quickQuoteSummary_['prem_result'] === 0 ? 0 : quickQuoteSummary_['prem_result']  | number:'1.2-2'}}
+              <div class="font-grey__font-eight__700">or NGN{{quickQuoteSummary_['prem_result'] === 0 ? 0 : quickQuoteSummary_['prem_result']  | number:'1.2-2'}}
                 per month</div>
             </div>
           </div>
