--- a/src/app/features/lms/ind/components/medicals/components/tests/tests.component.html
+++ b/src/app/features/lms/ind/components/medicals/components/tests/tests.component.html
@@ -10,89 +10,88 @@
   </div>
 
   <div class="full-border p-3 px-4">
-    <div class="d-flex justify-content-start fw-bold fs-6 pt-4">Medical</div>
+    <div class="d-flex justify-content-center fw-bold fs-6 pt-4">Medical</div>
     <div>
       <div>
-        <div class="d-flex justify-content-start pt-3 fs-6">Policy Details</div>
-        <div class="row px-4 py-2">
-          <div class="col-md-4 col-sm-12">
-            <div class="row">
-              <span class="text-gray col-md-4 col-sm-6">Life Assured:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium"
-                >Agnes Njoronge</span
-              >
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12">
-            <div class="row">
-              <span class="text-gray col-md-3 col-sm-6">Client ID:</span>
-              <span class="text-black col-md-9 col-sm-6 fw-medium">123131</span>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12">
-            <div class="row">
-              <span class="text-gray col-md-2 col-sm-6">Age:</span>
-              <span class="text-black col-md-10 col-sm-6 fw-medium">36</span>
-            </div>
-          </div>
-        </div>
+        <div class="d-flex justify-content-center pt-3 fs-6">Policy Details</div>
 
-        <div class="row px-4">
-          <div class="d-flex justify-content-start fs-7 fw-medium text-black">
-            Products
-          </div>
-
-          <div class="col-md-4 col-sm-12">
-            <div class="d-flex justify-content-start fs-7 fw-medium text-black">
-              Term Life Policy
+        <div class="d-flex justify-content-start px-4" style="font-size: 13px; font-weight: 500;">Policy summary</div>
+        <div style="font-size: 13px; padding: 0rem 2rem; ">
+          <div class="row px-4">
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-3 col-sm-6">Client:</span>
+                <span class="text-black col-md- col-sm-6 fw-medium">{{'Agnes Njoronge' | titlecase}}</span>
+              </div>
             </div>
-
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Status:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium">Active</span>
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-3 col-sm-6">Product:</span>
+                <span class="text-black col-md-9 col-sm-6 fw-medium">{{product?.description | titlecase}}</span>
+              </div>
             </div>
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Sum Assured:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium"
-                >Ksh 12300</span
-              >
-            </div>
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Policy No.:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium"
-                >POL/AC36356627</span
-              >
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-4 col-sm-6">Proposal No:</span>
+                <span class="text-black col-md-8 col-sm-6 fw-medium">{{quotation_details['proposal_no']}}</span>
+              </div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
-            <div class="d-flex justify-content-start fs-7 fw-medium text-black">
-              Whole Life Policy
+          <div class="row px-4">
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Effective date:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{date_full | date:'short'}}</span>
+              </div>
             </div>
-
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Status:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium">Active</span>
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Cover From:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{date_full | date:'short'}}</span>
+              </div>
             </div>
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Sum Assured:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium"
-                >Ksh 12300</span
-              >
-            </div>
-            <div class="row p-0">
-              <span class="text-gray col-md-4 col-sm-6">Policy No.:</span>
-              <span class="text-black col-md-8 col-sm-6 fw-medium"
-                >POL/AC36356627</span
-              >
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6 ">Cover To:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{date_full | date:'short'}}</span>
+              </div>
             </div>
           </div>
+          <div class="row px-4">
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Coverage duration:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{date_full | date:'short'}}</span>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Occupation:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{date_full | date:'short'}}</span>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Total Premium:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{quotation_details?.premium | number}}</span>
+              </div>
+            </div>
+          </div>
+          <div class="row px-4">
+            <div class="col-md-4 col-sm-12">
+              <div class="row">
+                <span class="text-gray col-md-5 col-sm-6">Total sum assured:</span>
+                <span class="text-black col-md-7 col-sm-6 fw-medium" >{{quotation_details?.sum_insured | number}}</span>
+              </div>
+            </div>
+          </div>
+          
         </div>
 
         <div class="row px-4">
           <div class="d-flex justify-content-start fs-7 fw-medium text-black pt-2">
             Lien Option
           </div>
-
           <div class="col-md-4 col-sm-12">
             <div class="row p-0">
 
@@ -119,27 +118,97 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <div>
-        <div class="d-flex justify-content-start pt-3 fs-6">Medical Tests</div>
-        <div class="row px-4 py-2">
-          <div class="col-md-4 col-sm-12">
-            <div class="row">
-              <ol class="text-black">
-                <li>Malaria</li>
-                <li>Lung</li>
-                <li>Tuberculosis</li>
-                <li class="py-0 text-primary fw-medium" style="cursor: pointer;">Add List <i class="fa-regular fa-plus"></i></li>
+        <div class="row col-4 px-4">
+          <div class="d-flex justify-content-start pt-2">Medical Tests</div>
 
-              </ol>
-              
-            </div>
+          <div class="container mt-4">
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th>Test</th>
+                <th>Validity Period</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td>Data 1</td>
+                <td> <div class="d-flex justify-content-between"> 
+                  <div> 3 Months</div>
+                  <div class = "dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                    <div>
+                      <i class="fa-solid fa-ellipsis-vertical"></i>
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a class="dropdown-item">Edit</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item">Delete</a>
+                        </li>
+                      </ul>
+                    </div>
+
+                  </div>
+               </div> </td>
+              </tr>
+
+              <tr>
+                <td>Data 1</td>
+                <td> <div class="d-flex justify-content-between"> 
+                  <div> 3 Months</div>
+                  <div class = "dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                    <div>
+                      <i class="fa-solid fa-ellipsis-vertical"></i>
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a class="dropdown-item">Edit</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item">Delete</a>
+                        </li>
+                      </ul>
+                    </div>
+
+                  </div>
+               </div> </td>
+              </tr>
+
+              <tr>
+                <td>Data 1</td>
+                <td> <div class="d-flex justify-content-between"> 
+                  <div> 3 Months</div>
+                  <div class = "dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                    <div>
+                      <i class="fa-solid fa-ellipsis-vertical"></i>
+                      <ul class="dropdown-menu">
+                        <li>
+                          <a class="dropdown-item">Edit</a>
+                        </li>
+                        <li>
+                          <a class="dropdown-item">Delete</a>
+                        </li>
+                      </ul>
+                    </div>
+
+                  </div>
+               </div> </td>
+              </tr>
+
+              <tr>
+                <div class="py-0 text-primary fw-medium" style="cursor: pointer;">Add Test</div>
+
+              </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
-
-
 
       <div>
         <div class="d-flex justify-content-start pt-3 fs-6">Medical Reports</div>
