--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Currency: </span>
-                  <span class="fw-light">{{ "KSH" }}</span>
+                  <span class="fw-light">{{ "NGN" }}</span>
                 </div>
                 <div class="d-flex justify-content-between">
                   <span class="font-grey__font-eight__700">Premium: </span>
